// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alarm CRUD (operations) Given an unknown error occurs on the server should return a 500 when trying to create the Alarm 1`] = `
{
  "message": "Server did a boo boo",
  "ok": false,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm does not exist should create the Alarm 1`] = `
{
  "data": {
    "afspraakId": 1,
    "afspraakUuid": "",
    "bedrag": 955,
    "bedragMargin": 75,
    "byDay": [],
    "byMonth": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
    ],
    "byMonthDay": [
      3,
    ],
    "datumMargin": 7,
    "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "isActive": false,
    "startDate": "2021-12-18",
  },
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return Alarms filtered by id (through request body) 1`] = `
{
  "data": [
    {
      "afspraakId": 1,
      "afspraakUuid": "",
      "bedrag": 955,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        3,
      ],
      "datumMargin": 7,
      "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "isActive": false,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 2,
      "afspraakUuid": "",
      "bedrag": 299.99,
      "bedragMargin": 15.9,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        25,
      ],
      "datumMargin": 14,
      "id": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "isActive": true,
      "startDate": "2021-12-18",
    },
  ],
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return Alarms filtered by id (through request query params) 1`] = `
{
  "data": [
    {
      "afspraakId": 1,
      "afspraakUuid": "",
      "bedrag": 955,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        3,
      ],
      "datumMargin": 7,
      "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "isActive": false,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 2,
      "afspraakUuid": "",
      "bedrag": 299.99,
      "bedragMargin": 15.9,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        25,
      ],
      "datumMargin": 14,
      "id": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "isActive": true,
      "startDate": "2021-12-18",
    },
  ],
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return all Alarms 1`] = `
{
  "data": [
    {
      "afspraakId": 1,
      "afspraakUuid": "",
      "bedrag": 955,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        3,
      ],
      "datumMargin": 7,
      "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "isActive": false,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 2,
      "afspraakUuid": "",
      "bedrag": 299.99,
      "bedragMargin": 15.9,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        25,
      ],
      "datumMargin": 14,
      "id": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "isActive": true,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 44,
      "afspraakUuid": "",
      "bedrag": 32.05,
      "bedragMargin": 12,
      "byDay": [
        "Monday",
      ],
      "byMonth": [],
      "byMonthDay": [],
      "datumMargin": 1,
      "id": "1a8ac60f-081f-4bbb-baca-6b6d399ce8db",
      "isActive": false,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 3,
      "afspraakUuid": "",
      "bedrag": 1200.12,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        4,
        7,
        10,
      ],
      "byMonthDay": [
        10,
      ],
      "datumMargin": 3,
      "id": "738247bc-e6b8-41ee-a09e-a6778822598d",
      "isActive": true,
      "startDate": "2021-12-18",
    },
  ],
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return only active Alarms 1`] = `
{
  "data": [
    {
      "afspraakId": 2,
      "afspraakUuid": "",
      "bedrag": 299.99,
      "bedragMargin": 15.9,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        25,
      ],
      "datumMargin": 14,
      "id": "5d65d8e9-1f4a-4cb9-a89c-0f952ac5f2ff",
      "isActive": true,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 3,
      "afspraakUuid": "",
      "bedrag": 1200.12,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        4,
        7,
        10,
      ],
      "byMonthDay": [
        10,
      ],
      "datumMargin": 3,
      "id": "738247bc-e6b8-41ee-a09e-a6778822598d",
      "isActive": true,
      "startDate": "2021-12-18",
    },
  ],
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return only inactive Alarms 1`] = `
{
  "data": [
    {
      "afspraakId": 1,
      "afspraakUuid": "",
      "bedrag": 955,
      "bedragMargin": 75,
      "byDay": [],
      "byMonth": [
        1,
        2,
        3,
        4,
        5,
        6,
        7,
        8,
        9,
        10,
        11,
        12,
      ],
      "byMonthDay": [
        3,
      ],
      "datumMargin": 7,
      "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
      "isActive": false,
      "startDate": "2021-12-18",
    },
    {
      "afspraakId": 44,
      "afspraakUuid": "",
      "bedrag": 32.05,
      "bedragMargin": 12,
      "byDay": [
        "Monday",
      ],
      "byMonth": [],
      "byMonthDay": [],
      "datumMargin": 1,
      "id": "1a8ac60f-081f-4bbb-baca-6b6d399ce8db",
      "isActive": false,
      "startDate": "2021-12-18",
    },
  ],
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should return the Alarm 1`] = `
{
  "data": {
    "afspraakId": 1,
    "afspraakUuid": "",
    "bedrag": 955,
    "bedragMargin": 75,
    "byDay": [],
    "byMonth": [
      1,
      2,
      3,
      4,
      5,
      6,
      7,
      8,
      9,
      10,
      11,
      12,
    ],
    "byMonthDay": [
      3,
    ],
    "datumMargin": 7,
    "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "isActive": false,
    "startDate": "2021-12-18",
  },
  "ok": true,
}
`;

exports[`Alarm CRUD (operations) Given the Alarm exists should update the Alarm 1`] = `
{
  "data": {
    "afspraakId": 999,
    "afspraakUuid": "",
    "bedrag": 999,
    "bedragMargin": 99,
    "byDay": [
      "Wednesday",
    ],
    "byMonth": [],
    "byMonthDay": [],
    "datumMargin": 10,
    "endDate": "",
    "id": "d9c00acb-8d04-4cf0-9be4-061f33b3357d",
    "isActive": false,
    "signaalId": "71d65065-2eb9-4f44-8f16-44d1e5a4d6f7",
    "signaalUuid": "",
    "startDate": "2033-12-31",
  },
  "ok": true,
}
`;
